--- a/web/permisostrabajo/gestion_trazabilidad.xhtml
+++ b/web/permisostrabajo/gestion_trazabilidad.xhtml
@@ -24,28 +24,20 @@
                     </f:facet> 
                     <p:row>
                         <p:column style="border-width: 1px;">
-                            <p:outputLabel value="#{creaPermisoController.permiso.permiso.id}"/>
+                            <p:outputLabel value="#{gestionPermisoController.permiso.permiso.id}"/>
                         </p:column>
                         <p:column style="border-width: 1px;">
-                            <p:outputLabel value="#{creaPermisoController.permiso.permiso.tarea}"/>
+                            <p:outputLabel value="#{gestionPermisoController.permiso.permiso.tarea}"/>
                         </p:column>
                         <p:column style="border-width: 1px;">
-                            <p:inplace editor="true" label="#{creaPermisoController.permiso.permiso.estadoPermiso.descripcion}">  
-                                <h:selectOneMenu value="#{creaPermisoController.permiso.permiso.estadoPermiso.id}" valueChangeListener="#{creaPermisoController.cambiarEstado}">  
-                                    <f:selectItem  itemValue="#{creaPermisoController.permiso.permiso.estadoPermiso.id}"  
-                                                   itemLabel="#{creaPermisoController.permiso.permiso.estadoPermiso.descripcion}"/> 
-                                    <f:selectItem  itemValue="#{creaPermisoController.permiso.permiso.estadoAnterior.id}"  
-                                                   itemLabel="#{creaPermisoController.permiso.permiso.estadoAnterior.descripcion}"/> 
-                                    <p:ajax update="@form"/>
-                                </h:selectOneMenu>  
-                            </p:inplace> 
+                            <p:outputLabel value="#{gestionPermisoController.permiso.permiso.estadoPermiso.descripcion}"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
             </p:panel>
 
             <p:panel id="trazabilidad" header="Trazabilidad del permiso de Trabajo">
-                <p:dataTable value="#{creaPermisoController.traz}" var="traz">
+                <p:dataTable value="#{gestionPermisoController.traz}" var="traz">
                     <p:column headerText="Operación">
                         <h:outputText value="#{traz.operacion.descripcion}"/>
                     </p:column>
@@ -65,8 +57,7 @@
                     </p:column>
                     <f:facet name="footer">
                         <!--  Sólo se permite la edición cuando está en estado creado Estado de Permiso 1 -->
-                        <p:commandButton icon="ui-icon-pencil" value="Editar" title="Editar permiso de trabajo" 
-                                         action="#{creaPermisoController.consultarDatosPermiso}" disabled="#{creaPermisoController.permiso.permiso.estadoPermiso.id ne 1}"/>
+                        <p:commandButton icon="ui-icon-pencil" value="Gestionar"  action="#{gestionPermisoController.gestionarPermiso}"/>
                     </f:facet>
                 </p:dataTable>
             </p:panel>
