--- a/web/permisostrabajo/gestion_datos.xhtml
+++ b/web/permisostrabajo/gestion_datos.xhtml
@@ -72,7 +72,7 @@
                      </p:column>
                      <p:column headerText="Peligros">
                          <p:commandButton action="#{gestionPermisoController.gestionarPeligros(tarea)}"  value="Ver" 
-                                          icon="ui-icon-suitcase" ajax="false" disabled="#{tarea.datos eq null}"/>
+                                          icon="ui-icon-folder-open" ajax="false" disabled="#{tarea.datos eq null}"/>
                      </p:column>
                      <p:column headerText="Editar">
                         <p:rowEditor  />
@@ -83,7 +83,7 @@
                      </p:column>
                 </p:dataTable>
             </p:panel>
-            
+            <p:separator/>
             <p:commandButton value="Siguiente" icon="ui-icon-arrow-1-e" action="#{gestionPermisoController.agregarConsideraciones}" ajax="false"/>
         </h:form>
    </ui:define>
